--- a/blog/2026-02-10-fory_0_15_0_release.md
+++ b/blog/2026-02-10-fory_0_15_0_release.md
@@ -19,7 +19,6 @@ The Apache Fory team is pleased to announce the 0.15.0 release. This is a major 
 - feat(xlang/java): refactor java native serialization type system and streaming type info for xlang by @chaokunyang in https://github.com/apache/fory/pull/3153
 - feat(xlang): fory schema idl and compiler by @chaokunyang in https://github.com/apache/fory/pull/3106
 - feat(compiler): add flatbuffers idl support by @chaokunyang in https://github.com/apache/fory/pull/3184
-- feat(compiler): support shared/circular reference serialization for fory/protobuf/flatbuffer idl by @chaokunyang in https://github.com/apache/fory/pull/3226
 
 ## Go Serialization: First Release
 
@@ -63,6 +62,40 @@ func main() {
 ```
 
 - Go guide: https://fory.apache.org/docs/guide/go/
+
+### Go Benchmarks
+
+<img src="/img/blog/fory_0_15_0_release/go_benchmark_combined.png" width="90%"/>
+
+Below are timing results (ns/op; lower is better) comparing Fory with Protobuf and Msgpack across representative data structures.
+
+| Data Type        | Operation   | Fory   | Protobuf | Msgpack |
+| ---------------- | ----------- | ------ | -------- | ------- |
+| Struct           | Serialize   | 66.0   | 97.8     | 184.9   |
+| Struct           | Deserialize | 82.7   | 90.9     | 309.6   |
+| Structlist       | Serialize   | 632.8  | 1783.0   | 3340.0  |
+| Structlist       | Deserialize | 906.4  | 1891.0   | 5709.0  |
+| Sample           | Serialize   | 137.3  | 367.3    | 1492.0  |
+| Sample           | Deserialize | 263.6  | 422.2    | 2661.0  |
+| Samplelist       | Serialize   | 1962.0 | 7087.0   | 26169.0 |
+| Samplelist       | Deserialize | 4234.0 | 9321.0   | 53615.0 |
+| Mediacontent     | Serialize   | 268.8  | 471.1    | 773.7   |
+| Mediacontent     | Deserialize | 426.9  | 553.1    | 1432.0  |
+| Mediacontentlist | Serialize   | 3736.0 | 9107.0   | 13911.0 |
+| Mediacontentlist | Deserialize | 7247.0 | 11435.0  | 27975.0 |
+
+Serialized data sizes (bytes):
+
+| Data Type        | Fory | Protobuf | Msgpack |
+| ---------------- | ---- | -------- | ------- |
+| Struct           | 58   | 61       | 57      |
+| Sample           | 446  | 375      | 524     |
+| MediaContent     | 342  | 301      | 400     |
+| StructList       | 560  | 1260     | 1146    |
+| SampleList       | 7600 | 7560     | 10486   |
+| MediaContentList | 5776 | 6080     | 8006    |
+
+Note: Results depend on hardware and implementation versions. See the Go benchmark docs for details: https://fory.apache.org/docs/benchmarks/go/
 
 ## Fory Schema IDL and Compiler: First Release
 
