--- a/i18n/zh-CN/docusaurus-plugin-content-docs/version-0.15.json
+++ b/i18n/zh-CN/docusaurus-plugin-content-docs/version-0.15.json
@@ -1,7 +1,7 @@
 {
   "version.label": {
-    "message": "dev",
-    "description": "The label for version current"
+    "message": "0.15",
+    "description": "The label for version 0.15"
   },
   "sidebar.docsSidebar.category.Introduction": {
     "message": "Apache Fory 介绍",
